@@ -14,28 +14,24 @@
 <fieldset name="advanced" label="COM_MENUS_LAYOUT_FEATURED_OPTIONS">
 			
 			<field name="num_leading_articles" type="text"
-				default="1"
 				description="JGLOBAL_NUM_LEADING_ARTICLES_DESC"
 				label="JGLOBAL_NUM_LEADING_ARTICLES_LABEL"
 				size="3"
 			/>
 
 			<field name="num_intro_articles" type="text"
-				default="4"
 				description="JGLOBAL_NUM_INTRO_ARTICLES_DESC"
 				label="JGLOBAL_NUM_INTRO_ARTICLES_LABEL"
 				size="3"
 			/>
 
 			<field name="num_columns" type="text"
-				default="2"
 				description="JGLOBAL_NUM_COLUMNS_DESC"
 				label="JGLOBAL_NUM_COLUMNS_LABEL"
 				size="3"
 			/>
 
 			<field name="num_links" type="text"
-				default="4"
 				description="JGLOBAL_NUM_LINKS_DESC"
 				label="JGLOBAL_NUM_LINKS_LABEL"
 				size="3"
